--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -31,7 +31,7 @@ $green                        : rgb(166,255,46);
 $blue                         : rgb(0,185,215);
 
 $body-color                  	: #ebebeb;
-$background-color             : #779ecb;
+$background-color             : #f7f2e5;
 
 $text-color                  	: #313130;
 $caption-color                : mix($white, $text-color, 25%);
